2048-game-Ingress-example/Deployment.yml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: 2048-game-deployment
  namespace: 2048-game-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 2048-game 
  template:
    metadata:
      labels:
        app: 2048-game 
    spec:
      containers:
        - name: 2048-game
          image: public.ecr.aws/l6m2t8p7/docker-2048:latest
          ports:
           - containerPort: 80
          resources:
            requests:
               cpu: "500m"
               memory: "256Mi"
            limits:
               cpu: "1000m"
               memory: "512Mi"
