2048-game-Ingress-example/Service.yml
apiVersion: v1 
kind: Service 
metadata: 
   name: game-service
   namespace: 2048-game-app
spec: 
  type: ClusterIP
  selector:
    app: 2048-game 
  ports: 
    - port: 80
      targetPort: 80
