2048-game-Ingress-example/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 2048-game-ingress
  namespace: 2048-game-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules: 
  -  http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: game-service
            port: 
              number: 80
